fail_crate/tests/default_and_into_iter.stderr
error: `default` cannot be combined with `into_iter` in field `#[new(...)]`.
 --> fail_crate/tests/default_and_into_iter.rs:5:11
  |
5 |     #[new(default, into_iter)]
  |           ^^^^^^^
