fail_crate/tests/default_and_into_iter.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(default, into_iter)]
    x: Vec<u32>
}

fn main() {}
